--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Array/ArrayBasic/ArrayBasic/Program.cs
+/Array/ArrayBasic/ArrayBasic/ArrayBasic.csproj
