updated RemoveDuplicates with LINQ solution

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 /Array/ArrayBasic/ArrayBasic/Program.cs
 /Array/ArrayBasic/ArrayBasic/ArrayBasic.csproj
+/Array/ArrayBasic/ArrayBasic/Program.cs
+/Array/ArrayBasic/ArrayBasic/ArrayBasic.csproj
